--- a/powershell/github/cloud-deployment.yml
+++ b/powershell/github/cloud-deployment.yml
@@ -26,7 +26,7 @@ jobs:
         run: cp cloud.gitignore .gitignore
         shell: bash
 
-      # zip everything, except what is defined in the '.zipignore'
+      # zip everything, except what is defined in the 'cloud.zipignore'
       - name: Zip Source Code
         run: zip -r sources.zip . -x@cloud.zipignore
         shell: bash
