--- a/powershell/github/main.yml
+++ b/powershell/github/main.yml
@@ -6,24 +6,16 @@ on:
     branches:
      - main
 
-env:
-  ## Project Id stored in Repository variables
-  projectId: ${{ vars.PROJECT_ID }} 
-  ## Umbraco Cloud Api Key stored in Repository secrets
-  umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }} 
-
 jobs:
   cloud-sync:
     uses: ./.github/workflows/cloud-sync.yml
-    with:
-      projectId: ${{ vars.PROJECT_ID }}
     secrets:
+      projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
 
   cloud-deployment:
     needs: cloud-sync
     uses: ./.github/workflows/cloud-deployment.yml
-    with:
-      projectId: ${{ vars.PROJECT_ID }}
     secrets:
+      projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
