--- a/powershell/azuredevops/cloud-sync.yml
+++ b/powershell/azuredevops/cloud-sync.yml
@@ -92,12 +92,13 @@ jobs:
       # Depending on your setup you may need to change settings and permissions to better fit your needs
       # This targets the same branch as the pipeline was triggered on.
       # Stopping a new pipeline run by using the "[skip ci]" as part of commit message 
+      #  --ignore-space-change --ignore-whitespace on the git apply allows for minor changes due to OS environment.
       - pwsh: |
           Write-Host "hello branch: $($env:BUILD_SOURCEBRANCHNAME)"
           git checkout $env:BUILD_SOURCEBRANCHNAME
           git config --global user.name "Azure Pipeline"
           git config --global user.email "hosted.agent@dev.azure.com"
-          git apply -v $(gitPatchFile)
+          git apply -v $(gitPatchFile) --ignore-space-change --ignore-whitespace
           git add --all
           git commit -m "Adding cloud changes since deployment $(latestDeploymentId) [skip ci]"
           git push --set-upstream origin $env:BUILD_SOURCEBRANCHNAME
