--- a/powershell/github/cloud-sync.yml
+++ b/powershell/github/cloud-sync.yml
@@ -93,17 +93,22 @@ jobs:
       # Using plain git to try an push changes back to local repo
       # Depending on your setup you may need to change settings and permissions to better fit your needs
       # This targets the same branch as the pipeline was triggered on.
-      # Stopping a new pipeline run by using the "[skip ci]" as part of commit message 
-      #  --ignore-space-change --ignore-whitespace on the git apply allows for minor changes due to OS environment.
+
       - name: Applying git patch to branch
+        id: update-bundle
         env:
           remoteChanges: ${{ needs.checkForChanges.outputs.remoteChanges }}
-          latestDeploymentId: ${{ needs.preflight.outputs.latestDeployemntId }}
+          latestDeploymentId: ${{ needs.preflight.outputs.latestDeploymentId }}
+          gitName: github-actions
+          gitEmail: github-actions@github.com
         if: ${{ env.remoteChanges == 'yes' }}
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git apply ${{GITHUB.WORKSPACE}}/patch/git-patch.diff --ignore-space-change --ignore-whitespace
-          git add *
-          git commit -m "Adding cloud changes since deployment ${{ env.latestDeploymentId }} [skip ci]"
-          git push
+        shell: pwsh
+        run: >
+          ${{GITHUB.WORKSPACE}}/.github/powershell/Apply-Patch.ps1
+          -PatchFile ${{ GITHUB.WORKSPACE }}/patch/git-patch.diff 
+          -LatestDeploymentId ${{ env.latestDeploymentId }} 
+          -PipelineVendor GITHUB
+          -GitUserName ${{ env.gitName }}
+          -GitUserEmail ${{ env.gitEmail }}
+    outputs:
+      newSha: ${{ steps.update-bundle.outputs.updatedSha }}
