--- a/powershell/github/cloud-sync.yml
+++ b/powershell/github/cloud-sync.yml
@@ -2,8 +2,12 @@ name: Umbraco Cloud Sync
 
 on:
   workflow_call:
+    outputs:
+      newSha:
+        description: 'The new SHA hash if there was a patch'
+        value: ${{ jobs.applyRemoteChanges.outputs.newSha }}
     secrets:
-      projectId: 
+      projectId:
         required: true
       umbracoCloudApiKey:
         required: true
@@ -89,10 +93,13 @@ jobs:
         with:
           name: git-patch
           path: ${{GITHUB.WORKSPACE}}/patch
-      
+          
       # Using plain git to try an push changes back to local repo
       # Depending on your setup you may need to change settings and permissions to better fit your needs
       # This targets the same branch as the pipeline was triggered on.
+
+      ## You can change the gitName and gitEmail to whatever you want, this will show up in you git history on
+      ## changes coming from Umbraco Cloud
 
       - name: Applying git patch to branch
         id: update-bundle
