--- a/powershell/github/main.yml
+++ b/powershell/github/main.yml
@@ -4,20 +4,24 @@ name: pipeline
 on:
   push:
     branches:
-     - main
+      - main
 
 jobs:
   # Try to sync the local repository to get up to speed with any changes in Cloud project
   cloud-sync:
+    name: "Syncronize with Cloud"
     uses: ./.github/workflows/cloud-sync.yml
     secrets:
       projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
-      
+
   # Package and Deploy to Umbraco Cloud
   cloud-deployment:
+    name: "Deploy to Cloud"
     needs: cloud-sync
     uses: ./.github/workflows/cloud-deployment.yml
+    with:
+      newSha: ${{ needs.cloud-sync.outputs.newSha }}
     secrets:
-      projectId: ${{ secrets.PROJECT_ID }}
-      umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
+      PROJECT_ID: ${{ secrets.PROJECT_ID }}
+      UMBRACO_CLOUD_API_KEY: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
