Add Azure Devops enhancements

--- a/bash/azuredevops/azure-release-pipeline.yaml
+++ b/bash/azuredevops/azure-release-pipeline.yaml
@@ -7,7 +7,7 @@ variables:
   - name: MajorVersion
     value: 0
   - name: MinorVersion
-    value: 5
+    value: 0
   - name: BuildConfiguration
     value: 'Release'
   - name: projectId
@@ -35,6 +35,10 @@ stages:
 # Package and Deploy to Umbraco Cloud
   - stage: CloudDeploymentStage
     displayName: Deploy To Cloud
+    dependsOn: cloudSyncStage
+    condition: in(dependencies.cloudSyncStage.result, 'Succeeded', 'Skipped')
+    variables:
+      newCommitSha: $[ stageDependencies.cloudSyncStage.ApplyRemoteChanges.outputs['cloudGitApplyStep.updatedSha'] ]
     jobs: 
       - template: cloud-deployment.yml
         parameters:
