--- a/powershell/azuredevops/azure-release-pipeline.yaml
+++ b/powershell/azuredevops/azure-release-pipeline.yaml
@@ -35,6 +35,10 @@ stages:
 # Package and Deploy to Umbraco Cloud
   - stage: CloudDeploymentStage
     displayName: Deploy To Cloud
+    dependsOn: cloudSyncStage
+    condition: in(dependencies.cloudSyncStage.result, 'Succeeded', 'Skipped')
+    variables:
+      newCommitSha: $[ stageDependencies.cloudSyncStage.ApplyRemoteChanges.outputs['cloudGitApplyStep.updatedSha'] ]
     jobs: 
       - template: cloud-deployment.yml
         parameters:
