--- a/powershell/azuredevops/cloud-sync.yml
+++ b/powershell/azuredevops/cloud-sync.yml
@@ -66,6 +66,7 @@ jobs:
           targetPath: $(Pipeline.Workspace)/patch/git-patch.diff
           artifact: PatchFile
 
+  # Try to apply changes if we got any
   - job: ApplyRemoteChanges
     displayName: Apply Remote Changes
     dependsOn: [ cloudSync, checkForChanges ]
@@ -92,7 +93,6 @@ jobs:
       # Depending on your setup you may need to change settings and permissions to better fit your needs
       # This targets the same branch as the pipeline was triggered on.
       # Stopping a new pipeline run by using the "[skip ci]" as part of commit message 
-      #  --ignore-space-change --ignore-whitespace on the git apply allows for minor changes due to OS environment.
       - pwsh: |
           Write-Host "hello branch: $($env:BUILD_SOURCEBRANCHNAME)"
           git checkout $env:BUILD_SOURCEBRANCHNAME
