--- a/powershell/azuredevops/azure-release-pipeline.yaml
+++ b/powershell/azuredevops/azure-release-pipeline.yaml
@@ -44,4 +44,5 @@ stages:
         parameters:
           projectId: $(projectId)
           umbracoCloudApiKey: $(umbracoCloudApiKey)
+          newCommitSha: $(newCommitSha)
           
