Add the skip version check step option

--- a/v2/bash/azuredevops/cloud-deployment.yml
+++ b/v2/bash/azuredevops/cloud-deployment.yml
@@ -22,6 +22,7 @@ jobs:
             $(TargetEnvironmentAlias)
             "Run for $(Build.BuildNumber)"
             "true"
+            "false"
             $(pipelineVendor)
 
   - job: CheckDeploymentProgress
