--- a/v2/powershell/azuredevops/cloud-deployment.yml
+++ b/v2/powershell/azuredevops/cloud-deployment.yml
@@ -23,6 +23,7 @@ jobs:
             -TargetEnvironmentAlias $(TargetEnvironmentAlias)
             -CommitMessage "Run for $(Build.BuildNumber)"
             -NoBuildAndRestore $True
+            -SkipVersionCheck $False
             -PipelineVendor $(pipelineVendor)
 
   - job: CheckDeploymentProgress
