--- a/v2/bash/github/main.yml
+++ b/v2/bash/github/main.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  workflow_dispatch: # Allow manual triggering of the workflow
 
 jobs:
   cloud-sync:
