--- a/v2/bash/github/main.yml
+++ b/v2/bash/github/main.yml
@@ -8,6 +8,7 @@ on:
   workflow_dispatch: # Allow manual triggering of the workflow
 
 jobs:
+  # Get changes from cloud
   cloud-sync:
     name: "Umbraco Cloud Sync"
     uses: ./.github/workflows/cloud-sync.yml
@@ -15,8 +16,9 @@ jobs:
       projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
     with:
-      targetEnvironmentAlias: '##Your target environment alias here##'
-      
+      targetEnvironmentAlias: ${{ vars.TARGET_ENVIRONMENT_ALIAS }}
+
+  # Pack and upload the deployment Artifact
   cloud-artifact:
     name: "Prepare and Upload Artifact"
     uses: ./.github/workflows/cloud-artifact.yml
@@ -25,14 +27,16 @@ jobs:
       projectId: ${{ secrets.PROJECT_ID }}
       umbracoCloudApiKey: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
 
-  # Package and Deploy to Umbraco Cloud
+  # Deploy to Umbraco Cloud
   cloud-deployment:
     name: "Deploy to Cloud"
     needs: cloud-artifact
     uses: ./.github/workflows/cloud-deployment.yml
     with:
       artifactId: ${{ needs.cloud-artifact.outputs.artifactId }}
-      targetEnvironmentAlias: '##Your target environment alias here##'
+      targetEnvironmentAlias: ${{ vars.TARGET_ENVIRONMENT_ALIAS }}
+      noBuildAndRestore: "false"
+      skipVersionCheck: "false"
     secrets:
       PROJECT_ID: ${{ secrets.PROJECT_ID }}
       UMBRACO_CLOUD_API_KEY: ${{ secrets.UMBRACO_CLOUD_API_KEY }}
