--- a/v2/powershell/github/cloud-artifact.yml
+++ b/v2/powershell/github/cloud-artifact.yml
@@ -1,4 +1,4 @@
-name: Deploy To Cloud
+name: Prepare and Upload Artifact
 
 on:
   workflow_call:
@@ -14,47 +14,28 @@ on:
     outputs:
       artifactId:
         description: 'The Id of the uploaded artifact'
-        value: ${{ jobs.uploadArtifact.outputs.artifactId }}
+        value: ${{ jobs.prepareDeployment.outputs.artifactId }}
 
 jobs:
   prepareDeployment:
-    name: Prepare Deployment to cloud
+    name: Prepare Artifact to cloud
     runs-on: ubuntu-latest
+    outputs:
+      artifactId: ${{ steps.upload-artifact.outputs.artifactId }}
     steps:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.newSha }}
 
       # switch the gitignore files so cloud does not ignore the build frontend assets
-      - name: Prepare Cloud Git Ignore
-        run: cp cloud.gitignore .gitignore
-        shell: bash
-
       # zip everything, except what is defined in the 'cloud.zipignore'
-      - name: Zip Source Code
-        run: zip -r sources.zip . -x@cloud.zipignore
+      - name: Prepare Cloud Git Ignore and Zip Source Code
+        run: |
+          echo "switching .gitignore with cloud.gitignore"
+          cp cloud.gitignore .gitignore
+          echo "Packing artifact for upload"
+          zip -r sources.zip . -x@cloud.zipignore
         shell: bash
-
-      - name: Store package for upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: source-artifact
-          path: ${{GITHUB.WORKSPACE}}/sources.zip
-          retention-days: 1
-
-  uploadArtifact:
-    name: Upload Source
-    runs-on: ubuntu-latest
-    needs: prepareDeployment
-    outputs:
-      artifactId: ${{ steps.upload-artifact.outputs.artifactId }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Get package for upload
-        uses: actions/download-artifact@v4
-        with:
-            name: source-artifact
 
       # Upload your zipped artifact
       - name: Post Zipped Artifact
